[metadata]
name = openapi_server
version = 1.0.0
description = Nncof_EventsSubscription Service API.   © 2025, 3GPP Organizational Partners (ARIB, ATIS, CCSA, ETSI, TSDSI, TTA, TTC).   All rights reserved. 
long_description = file: README.md
keywords = OpenAPI Nncof_EventsSubscription
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
